cmake_minimum_required (VERSION 3.1)
project (mapsort)
set (CMAKE_CXX_STANDARD 11)

set (MAJOR_VERSION 1)
set (MINOR_VERSION 0)

add_definitions(-D_SCL_SECURE_NO_WARNINGS)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
find_package(Boost REQUIRED)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_STATIC_RUNTIME ON)
include_directories("${Boost_INCLUDE_DIRS}") 
include_directories("${PROJECT_BINARY_DIR}") 
add_executable(mapsort src/mapsort.cpp)
install (TARGETS mapsort DESTINATION ${CMAKE_SOURCE_DIR}/bin/)
